fixed margin on mobile and desk

--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,8 @@ h1, h2, h3{
     border-radius: .5rem;
     overflow: hidden;
     max-width: 40rem;
-    margin: auto;
+    /* margin: auto; */
+    margin: 100px auto 0;
 }
 
 @media only screen and (min-width: 62.5em){
@@ -51,6 +52,12 @@ h1, h2, h3{
 
     .description{
         grid-column: 1 / 3;
+    }
+}
+
+@media (max-width: 996px){
+    .price{
+        margin: auto;
     }
 }
 
